# LMU_S4

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py
src/datasets/esc50/: esc50_dataset.py
src/datasets/etts/: etts_config.py  etts_dataloader.py  etts_dataset.py
src/datasets/ppg/: __init__.py  ppg_config.py  ppg_dataloader.py  ppg_dataset.py  ppg_filters.py
src/datasets/ptbxl/: ptbxl_dataloader.py  ptbxl_dataset.py
src/eval/: infer.py  metrics.py  report.py
src/models/: base.py  classifier.py  lmu.py  lmu_block.py
src/models/s4/: krylov.py  s4_block.py
src/models/v2/: base.py  build_model.py  classifier.py  lmu_block.py  s4_block.py
src/notebooks/: esc50.ipynb  ptbxl.ipynb
src/notebooks/esc50/: esc50_lmu.ipynb  esc50_lmu_training.ipynb  esc50_s4_training.ipynb
src/notebooks/etts/: etts_lmu.ipynb  etts_s4.ipynb  utils.py
src/notebooks/ppg/: ppg_lmu.ipynb
src/notebooks/ptbxl/: ptbxl_lmu.ipynb  ptbxl_s4.ipynb
src/notebooks/ptbxl/runs/ptbxl_task/: history.json
src/tasks/: registry.py  spec.py
src/train_utils/: early_stopping.py  ema.py  loops.py  trainer.py
src/types/: task_protocol.py
src/utils/: common.py  logging.py  metrics.py
tests/: __init__.py  test_main.py
